[package]
name = "smd_event_driven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smd_event_driven"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
num-complex = "0.4"
itertools = "0.8"
rand_pcg = "0.3.1"
pyo3 = { version = "0.16.3", features = ["extension-module","abi3-py39"] }
arrange = "0.1.3"
